--- a/221024/오답노트.md
+++ b/221024/오답노트.md
@@ -1,3 +1,9 @@
+# 풀지 못한 이유
+
+sort() 함수에 대한 이해가 부족했다.
+
+# sort()
+
 `sort()` 메서드는 배열의 요소를 적절한 위치에 정렬한 후 그 배열을 반환합니다.
 
 arr.sort([compareFunction])
